// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline should render correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border-radius: 50%;
  height: 64px;
  margin-right: 1rem;
  width: 64px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

<div
  class="c0"
>
  <img
    class="c1"
    src="https://i.pravatar.cc/128?img=69"
  />
  <div
    class="c2"
  >
    <span>
      John Smith
    </span>
    <span>
      Art editor
    </span>
  </div>
</div>
`;

exports[`Byline should render correctly without an avatar 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span>
      John Smith
    </span>
    <span>
      Art editor
    </span>
  </div>
</div>
`;
